--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,38 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* global theme colors 
+  #EDFFEC Honeydew
+  #61E786 Light Green
+  #5A5766 Davy's Gray
+  #48435C English Violet
+  #9792E3 Tropical Indigo
+*/
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  background-color: #5A5766;
+  font-family: 'Roboto', sans-serif;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pageDiv {
+  display: grid;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+nav {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  background-color: #48435C;
 }
 
-.card {
-  padding: 2em;
+li {
+  list-style-type: none;
 }
 
-.read-the-docs {
-  color: #888;
+span {
+  color: #EDFFEC;
 }
