--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ body {
 .pageDiv {
   display: grid;
   justify-content: center;
+  justify-items: center;
 }
 
 nav {
@@ -27,6 +28,11 @@ nav {
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   background-color: #48435C;
+}
+
+a {
+  text-decoration: none;
+  color: #EDFFEC;
 }
 
 li {
